--- a/Gyms/about.html
+++ b/Gyms/about.html
@@ -19,6 +19,7 @@
       <li><a href="health.html">Health</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="contact.html">Contact Us</a></li>
+      <li><a href="useractive.html">User Activity</a></li>
     </ul>
 
       <ul class="right-side">
@@ -28,26 +29,27 @@
   </nav>
 
   <section class="intro">
-    <h2>Welcome to Our Website</h2>
-    <p>We aim to provide the best health tips and activities for seniors to maintain a healthy lifestyle.</p>
+    <h2>This Page contain anyting aobut this website</h2>
+    <p>
+      Meet our team, learn about our mission, and find answers to frequently asked questions.
 </section>
 
 <section class="team">
     <h3>Meet the Team</h3>
     <div class="team-member">
-        <img src="/img/fullstack_ngl.jpg" alt="Team Member">
-        <h4>John Doe</h4>
-        <p>Project Manager</p>
+        <img src="/img/shadow.webp" alt="Team Member">
+        <h4>66022141</h4>
+        <p>Supakorn Phromsaramek</p>
     </div>
     <div class="team-member">
-        <img src="/img/fullstack_ngl.jpg" alt="Team Member">
-        <h4>Jane Smith</h4>
-        <p>Lead Developer</p>
+        <img src="/img/shadow.webp" alt="Team Member">
+        <h4>66021263</h4>
+        <p>Kim Heng Lui</p>
     </div>
     <div class="team-member">
-      <img src="/img/fullstack_ngl.jpg" alt="Team Member">
-      <h4>Jane Smith</h4>
-      <p>Lead Developer</p>
+      <img src="/img/shadow.webp" alt="Team Member">
+      <h4>66021555</h4>
+      <p>Theparak Inprasong</p>
   </div>
 </section>
 
