--- a/Gyms/activity.html
+++ b/Gyms/activity.html
@@ -20,6 +20,7 @@
       <li><a href="health.html">Health</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="contact.html">Contact Us</a></li>
+      <li><a href="useractive.html">User Activity</a></li>
     </ul>
 
       <ul class="right-side">
@@ -29,8 +30,11 @@
   </nav>
 
   <section class="intro">
-    <h2>Welcome to Our Website</h2>
-    <p>We aim to provide the best health tips and activities for seniors to maintain a healthy lifestyle.</p>
+    <br>
+    <h2>Let's visit our activity</h2>
+    
+    
+    <br>
 </section>
 
   <div class="activity-container">
@@ -38,57 +42,57 @@
 
     <div class="activity-box-row">
       <a href="/subhtml/1Jan.html" class="activity-box">
-        <img src="/img/ph.jpg" alt="January">
+        <img src="/img/January.png" alt="January">
         <p>January</p>
       </a>
       <a href="/subhtml/2Feb.html" class="activity-box">
-        <img src="/img/ph.jpg" alt="Febuary">
+        <img src="/img/February.png" alt="Febuary">
         <p>Febuary</p>
       </a>
       <a href="/subhtml/3March.html" class="activity-box">
-        <img src="/img/ph.jpg" alt="March">
+        <img src="/img/March.png" alt="March">
         <p>March</p>
       </a>
       <a href="/subhtml/4April.html" class="activity-box">
-        <img src="/img/ph.jpg" alt="April">
+        <img src="/img/April.png" alt="April">
         <p>April</p>
       </a>
     </div>
 
     <div class="activity-box-row">
       <a href="/subhtml/5May.html" class="activity-box">
-        <img src="/img/ph.jpg" alt="May">
+        <img src="/img/May.png" alt="May">
         <p>May</p>
       </a>
       <a href="/subhtml/6June.html" class="activity-box">
-        <img src="/img/ph.jpg" alt="June">
+        <img src="/img/June.png" alt="June">
         <p>June</p>
       </a>
       <a href="/subhtml/7July.html" class="activity-box">
-        <img src="/img/ph.jpg" alt="July">
+        <img src="/img/July.png" alt="July">
         <p>July</p>
       </a>
       <a href="/subhtml/8August.html" class="activity-box">
-        <img src="/img/ph.jpg" alt="August">
+        <img src="/img/August.png" alt="August">
         <p>August</p>
       </a>
     </div>
 
     <div class="activity-box-row">
       <a href="/subhtml/9September.html" class="activity-box">
-        <img src="/img/ph.jpg" alt="September">
+        <img src="/img/September.png" alt="September">
         <p>September</p>
       </a>
       <a href="/subhtml/10October.html" class="activity-box">
-        <img src="/img/ph.jpg" alt="October">
+        <img src="/img/October.png" alt="October">
         <p>October</p>
       </a>
       <a href="/subhtml/11November.html" class="activity-box">
-        <img src="/img/ph.jpg" alt="November">
+        <img src="/img/November.png" alt="November">
         <p>November</p>
       </a>
       <a href="/subhtml/12December.html" class="activity-box">
-        <img src="/img/ph.jpg" alt="December">
+        <img src="/img/December.png" alt="December">
         <p>December</p>
       </a>
     </div>
