--- a/Gyms/contact.html
+++ b/Gyms/contact.html
@@ -23,6 +23,7 @@
       <li><a href="health.html">Health</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="contact.html">Contact Us</a></li>
+      <li><a href="useractive.html">User Activity</a></li>
     </ul>
 
       <ul class="right-side">
@@ -42,7 +43,11 @@
   
           <div class="contactTitle">
             <h2>Get In Touch</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+            <p>
+              We are here to help you with any questions or concerns you may have. 
+              Feel free to reach out to us and we will respond as soon as we can.
+            </p>
+
           </div>
   
           <div class="contactInfo">
@@ -53,7 +58,7 @@
               </div>
               <div class="details">
                 <span>Phone</span>
-                <span>+00 110 111 00</span>
+                <span>+66 82 881 9578</span>
               </div>
             </div>
   
@@ -63,7 +68,7 @@
               </div>
               <div class="details">
                 <span>Email</span>
-                <span>name.tutorial@gmail.com</span>
+                <span>gaeteam@gmail.com</span>
               </div>
             </div>
   
@@ -73,7 +78,9 @@
               </div>
               <div class="details">
                 <span>Location</span>
-                <span>X Street, Y Road, San Fransisco</span>
+                <span>
+                  56000, Maeka, Phayao
+                </span>
               </div>
             </div>
   
@@ -111,7 +118,7 @@
                 <option value="" disabled selected>-- Select a Subject --</option>
                 <option value="general">Registration Activity</option>
                 <option value="feedback">Feedback</option>
-                <option value="other">Other</option>
+                <option value="other">Other</option>  
               </select>
             </div>
             
