--- a/Gyms/health.html
+++ b/Gyms/health.html
@@ -19,6 +19,7 @@
       <li><a href="health.html">Health</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="contact.html">Contact Us</a></li>
+      <li><a href="useractive.html">User Activity</a></li>
     </ul>
 
       <ul class="right-side">
@@ -29,63 +30,68 @@
  <main>
   <section class="hero">
     <h2>Stay Healthy, Stay Happy</h2>
-    <p>Explore activities and tips to maintain your health.</p>
+    <p>
+      </p>
+
 </section>
 
 <section class="activities">
     <div class="activity">
-        <img src="/img/img1.jpg" alt="Exercise">
-        <h3>Exercise</h3>
-        <p>Simple daily exercises to keep your body active and strong.</p>
+        <img src="/img/ff.webp" alt="Exercise">
+        <h3> Eat More Whole Foods </h3>
+        <p>Choose fresh fruits, vegetables, whole grains, and lean proteins.</p>
     </div>
     <div class="activity">
-        <img src="/img/img2.jpg" alt="Meditation">
-        <h3>Meditation</h3>
-        <p>Relax your mind and improve focus with guided meditation tips.</p>
+        <img src="/img/ww.webp" alt="Meditation">
+        <h3>Stay Hydrated</h3>
+        <p>Drinking enough water is crucial for digestion and metabolism.</p>
     </div>
     <div class="activity">
-        <img src="/img/img3.jpg" alt="Healthy Eating">
-        <h3>Healthy Eating</h3>
-        <p>Learn about balanced diets and healthy recipes for seniors.</p>
+        <img src="/img/mm.webp" alt="Healthy Eating">
+        <h3> Practice Mindful Eating </h3>
+        <p> Enjoy your meals and listen to your body's hunger signals.</p>
     </div>
 </section>
 
 <div class="text-sale">
   <p>
-    "Welcome to **Web name**! Your ultimate guide to staying healthy and active as you age. Explore our easy-to-follow exercise tips, health advice, and more—all designed just for you. Visit our website today and take the first step toward a healthier, happier life!"
+    Maintaining a healthy lifestyle starts with proper nutrition and balanced meals. Eating a variety of nutrient-rich foods helps boost your immune system, improve energy levels, and enhance overall well-being.
   </p>  
 </div>
 
 <section class="hero">
-  <h2>Stay Healthy, Stay Happy</h2>
-  <p>Explore activities and tips to maintain your health.</p>
+  <h2>To keep you on focus</h2>
+  <p>We also have activity tracking, To make sure you can complete it any time you want.</p>
 </section>
 
 <section class="card-box">
   <div class="card">
-      <a href="#" target="_blank" >
+      <a href="#" >
       <div class="card-img car-1"></div>
-        <h2>Title1</h2>
-        <p>TextWelcome to **Web name**! Your ultimate guide to staying healthy and active as you age. Explore our easy-to-follow exercise tips, health advice, and more—all designed just for you. Visit our website today and take the first step toward a healthier, happier life!</p>
-        <h3>Click to go</h3>
+        <h2>Member 1</h2>
+        <p>I create this website because I want to make sure that my grnadma can stay with me for longer.</p>
     </a>
     </div>
 
     <div class="card">
       <a href="#" target="_blank">
       <div class="card-img car-2"></div>
-        <h2>Title2</h2>
-        <p>Welcome to **Web name**! Your ultimate guide to staying healthy and active as you age. Explore our easy-to-follow exercise tips, health advice, and more—all designed just for you. Visit our website today and take the first step toward a healthier, happier life!</p>
-        <h3>Click to go</h3>
+        <h2>Member 2</h2>
+        <p>
+          I build this website for my grandma and grandpa, I want to make sure they can stay healthy and happy.
+        </p>
+      
     </a>
     </div>
 
     <div class="card">
       <a href="#" target="_blank">
       <div class="card-img car-3"></div>
-        <h2>Title3</h2>
-        <p>TextWelcome to **Web name**! Your ultimate guide to staying healthy and active as you age. Explore our easy-to-follow exercise tips, health advice, and more—all designed just for you. Visit our website today and take the first step toward a healthier, happier life!</p>
-        <h3>Click to go</h3>
+        <h2>Member 3</h2>
+        <p>
+              I just want to push my limit into the next level, and become a good developer. for my grandma and grandpa.
+        </p>
+      
     </a>
     </div>  
   </section>
