--- a/Gyms/login.html
+++ b/Gyms/login.html
@@ -20,6 +20,7 @@
       <li><a href="health.html">Health</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="contact.html">Contact Us</a></li>
+      <li><a href="useractive.html">User Activity</a></li>
     </ul>
       <ul class="right-side">
         <li><a href="login.html" target="_blank"><button class="login-but">Log In / Register</button></a></li>
