--- a/Gyms/subhtml/10October.html
+++ b/Gyms/subhtml/10October.html
@@ -18,6 +18,7 @@
       <li><a href="/health.html">Health</a></li>
       <li><a href="/about.html">About</a></li>
       <li><a href="/contact.html">Contact Us</a></li>
+      <li><a href="/useractive.html">User Activity</a></li>
     </ul>
 
       <ul class="right-side">
